@@ -10,7 +10,6 @@ import java.util.Map;
 import java.util.stream.Stream;
 
 import org.eclipse.sw360.datahandler.thrift.users.User;
-import org.jboss.logging.Logger;
 import org.keycloak.common.util.MultivaluedHashMap;
 import org.keycloak.component.ComponentModel;
 import org.keycloak.models.KeycloakSession;
@@ -84,7 +83,7 @@ public class UserAdapter extends AbstractUserAdapterFederatedStorage {
     @Override
     public void setAttribute(String name, List<String> values) {
         if (name.equals(DEPARTMENT)) {
-            entity.setDepartment(values.get(0));
+            entity.setDepartment(values.getFirst());
         } else {
             super.setAttribute(name, values);
         }
